# cxxlox

./: .gitignore  CMakeLists.txt  README
include/: environment.hh  expression.hh  lox.hh  parser.hh  resolver.hh  scanner.hh  statement.hh  stdafx.hh  token.hh
src/: interpreter.cc  main.cc  parser.cc  resolver.cc  scaner.cc  token.cc
test/: 1.txt
